# microkit

./: build_sdk.py  rust-toolchain.toml
loader/: Makefile
loader/src/: loader.c
monitor/src/: main.c
tool/microkit/: Cargo.toml  __main__.py  sel4.py  sysxml.py
tool/microkit/initialiser/: Cargo.toml
tool/microkit/src/: elf.rs  lib.rs  main.rs  sdf.rs  sysxml.rs
tool/sel4coreplat/: __main__.py  sel4.py  sysxml.py
tool/test/: __init__.py
