#
# Copyright 2024, UNSW
#
# SPDX-License-Identifier: BSD-2-Clause
#

[package]
name = "microkit-tool"
version = "2.0.1-dev"
edition = "2021"
rust-version = "1.88.0"

[[bin]]
name = "microkit"
path = "src/main.rs"

[dependencies]
roxmltree = "0.19.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.117"
postcard = { version = "1.0.2", default-features = false, features = ["alloc"] }
sel4-capdl-initializer-types = { workspace = true }

[profile.release.package.microkit-tool]
strip = true

[workspace]
resolver = "3"
members = [
    "initialiser",
]

[workspace.dependencies.sel4-capdl-initializer]
git = "https://github.com/nspin/rust-seL4"
rev = "6918a96f8bcbf7b4f655c0986089905f906701db"

[workspace.dependencies.sel4-capdl-initializer-types]
git = "https://github.com/nspin/rust-seL4"
rev = "6918a96f8bcbf7b4f655c0986089905f906701db"
features = ["alloc", "serde", "deflate", "std"]
